--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,9 @@
 <script src="https://kit.fontawesome.com/65f22fe718.js" crossorigin="anonymous"></script>
 
 <mat-toolbar>
-    <img src="../../assets/images/logoHorizontal.png">
+    <a routerLink="/api/home">
+        <img src="../../assets/images/logoHorizontal.png">
+    </a>
 
     <div class="container shadow min-vh-100 py-4">
         <div class="row">
@@ -10,7 +12,7 @@
                 <div class="input-group">
                     <input class="form-control border-end-0 border rounded-pill" type="search" id="example-search-input">
                     <span class="input-group-append">
-                        <button class="btn btn-outline-secondary bg-white border-bottom-0 border rounded-pill ms-n5" type="button">
+                        <button class="btn btn-outline-secondary bg-white border rounded-pill ms-n5" type="button">
                             BUSCAR
                         </button>
                     </span>
@@ -20,7 +22,9 @@
     </div>
     
     <div class="icones">
-        <img src="../../assets/images/perfil.png">
+        <a routerLink="/login">
+            <img src="../../assets/images/perfil.png">
+        </a>
         <img src="../../assets/images/carrinho.png">
     </div>
     
