--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,31 +1,7 @@
-img {
-    cursor: pointer;
-    height: 4rem;
+.logo{
+    height: 60px;
 }
 
-.icones{
-    display: flex;
-    gap: 2rem;
-}
-
-.icones img{
-    height: 3rem;
-}
-
-#divBusca{
-  background-color:#2F4F4F;
-  border:solid 1px;
-  border-radius:15px;
-  width:300px;
-}
-
-.txtBusca{
-  float:left;
-  background-color:transparent;
-  padding-left:5px;
-  font-style:italic;
-  font-size:18px;
-  border:none;
-  height:32px;
-  width:260px;
+.icone{
+    height: 50px;
 }
