--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,31 +1,30 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/65f22fe718.js" crossorigin="anonymous"></script>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link " href="#"><img class="logo" src="../../assets/images/logoHorizontal.png"> <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
 
-<mat-toolbar>
-    <a routerLink="/api/home">
-        <img src="../../assets/images/logoHorizontal.png">
-    </a>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+      </form>
 
-    <div class="container shadow min-vh-100 py-4">
-        <div class="row">
-            <div class="col-md-5 mx-auto">
-                <div class="input-group">
-                    <input class="form-control border-end-0 border rounded-pill" type="search" id="example-search-input">
-                    <span class="input-group-append">
-                        <button class="btn btn-outline-secondary bg-white border rounded-pill ms-n5" type="button">
-                            BUSCAR
-                        </button>
-                    </span>
-                </div>
-            </div>
-        </div>
+      <div class="d-flex justify-content-end">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item ml-4">
+              <a class="nav-link justify" href="#"><img class="icone" src="../../assets/images/perfil.png"></a>
+            </li>
+            <li class="nav-item ml-2 mr-5">
+                <a class="nav-link" href="#"><img class="icone"  src="../../assets/images/carrinho.png"></a>
+              </li>
+          </ul>
+      </div>
     </div>
-    
-    <div class="icones">
-        <a routerLink="/login">
-            <img src="../../assets/images/perfil.png">
-        </a>
-        <img src="../../assets/images/carrinho.png">
-    </div>
-    
-</mat-toolbar>
+</nav>
+<app-carrousel></app-carrousel>
