--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,30 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link " href="#"><img class="logo" src="../../assets/images/logoHorizontal.png"> <span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
 
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
-      </form>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-      <div class="d-flex justify-content-end">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item ml-4">
-              <a class="nav-link justify" href="#"><img class="icone" src="../../assets/images/perfil.png"></a>
-            </li>
-            <li class="nav-item ml-2 mr-5">
-                <a class="nav-link" href="#"><img class="icone"  src="../../assets/images/carrinho.png"></a>
-              </li>
-          </ul>
+  <a class="navbar-brand ml-5" href="/home"><img class="logo" src="../../assets/images/logoHorizontal.png"></a>
+
+  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
+    <form class="form-inline mt-3 mr-5">
+      <input class="form-control mr-sm-2" type="search" placeholder="Busca..." aria-label="Search">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+    <div class="navbar-nav ml-5">
+      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="/login"><img class="icone" src="../../assets/images/perfil.png"></a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav mr-5">
+          <li class="nav-item">
+            <a class="nav-item nav-link" href="#"><img class="icone" src="../../assets/images/carrinho.png"></a>
+          </li>
+        </ul>
       </div>
     </div>
+  </div>
 </nav>
+    
 <app-carrousel></app-carrousel>
