--- a/src/app/carrousel/carrousel.component.html
+++ b/src/app/carrousel/carrousel.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="../../assets/images/1.jpg" class="d-block w-100" alt="imagem promocional">
+        <img src="../../assets/images/1.png" class="d-block w-100" alt="imagem promocional">
         </div>
         <div class="carousel-item">
-        <img src="../../assets/images/2.jpg" class="d-block w-100" alt="imagem de gift box">
+        <img src="../../assets/images/2.png" class="d-block w-100" alt="imagem de gift box">
         </div>
         <div class="carousel-item">
-        <img src="../../assets/images/3.jpg" class="d-block w-100" alt="conheça a nossa loja">
+        <img src="../../assets/images/3.png" class="d-block w-100" alt="conheça a nossa loja">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
