--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,6 +1,6 @@
 <div class="cards_produtos">
     <div class="card" style="width: 18rem;" *ngFor="let produto of produtos">
-        <img class="card-img-top" src="../../assets/images/canecaThiago.jpg" alt="Imagem do produto">
+        <img class="card-img-top" src="{{produto.imagem}}" alt="Imagem do produto">
         <div class="card-body">
             <h5 class="card-title">{{produto.nome}}</h5>
             <p class="card-text">{{produto.descricao}}</p>
