--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,32 +1,33 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand mr-lg-5 ml-lg-5" href="#"><img class="logo" src="../../assets/images/logoHorizontal.png"></a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  
 
-  <a class="navbar-brand ml-5" href="/home"><img class="logo" src="../../assets/images/logoHorizontal.png"></a>
-
-  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
-    <form class="form-inline mt-3 mr-5">
-      <input class="form-control mr-sm-2" type="search" placeholder="Busca..." aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+  <div class="collapse navbar-collapse mr-lg-5" id="navbarTogglerDemo03">
+    <form class="form-inline ml-lg-5 mt-3 mr-auto">
+      <input class="form-control mr-sm-2 input-busca" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
     </form>
-    <div class="navbar-nav ml-5">
-      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="/login"><img class="icone" src="../../assets/images/perfil.png"></a>
-          </li>
-        </ul>
 
-        <ul class="navbar-nav mr-5">
-          <li class="nav-item">
-            <a class="nav-item nav-link" href="#"><img class="icone" src="../../assets/images/carrinho.png"></a>
-          </li>
-        </ul>
-      </div>
-    </div>
+    <ul class="navbar-nav mt-2 mt-lg-0 my-2 my-lg-0">
+
+      <a class="nav-link ml-3" href="/login">
+        <li class="nav-item row">
+          <img class="icone mr-lg-4" src="../../assets/images/perfil.png">
+          <span class="texto-nav-link align-middle mt-2 ml-2">Perfil</span>
+        </li>
+      </a>
+
+      <a class="nav-link ml-3" href="#">
+        <li class="nav-item row">
+          <img class="icone" src="../../assets/images/carrinho.png">
+          <span class="texto-nav-link align-middle mt-2 ml-2">Carrinho</span>
+        </li>
+      </a>
+    </ul>
+    
   </div>
 </nav>
-    
-<app-carrousel></app-carrousel>
