--- a/ShipIt-front/src/app/login/login.component.html
+++ b/ShipIt-front/src/app/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <div class="login">
+        <a routerLink="/home">
+            <img class="logoLogin" src="../../assets/images/logoBranca.png">
+        </a>
         <h1>Bem vindo!</h1>
         <h2>Login:</h2>
         <input type="text" placeholder="Usuário" name="nomeLogin" [(ngModel)]= "nomeUsuarioLogin">
