--- a/ShipIt-front/src/app/cadastro-item/cadastro-item.component.html
+++ b/ShipIt-front/src/app/cadastro-item/cadastro-item.component.html
@@ -3,24 +3,29 @@
     <form class="formulario">
         <div class="form-group">
             <label for="exampleInputEmail1">Nome:</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ex. Caneca do Thiago">
+            <input type="text" class="form-control" placeholder="Ex. Caneca do Thiago" name="nomeProduto" [(ngModel)]= "nomeProduto">
         </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Descrição do produto:</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ex. caneca preta, cuidada com muito carinho e muito bonita"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ex. caneca preta, cuidada com muito carinho e muito bonita" name="descricaoProduto" [(ngModel)]= "descricaoProduto"></textarea>
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Preço:</label>
-            <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ex. 200,00">
+            <input type="number" class="form-control" placeholder="Ex. 200,00" name="valorProduto"[(ngModel)]= "valorProduto">
           </div>
           <div class="form-group">
             <label for="exampleInputEmail1">Quantidade:</label>
-            <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ex. 50">
+            <input type="number" class="form-control" placeholder="Ex. 50" name="quantidadeEstoqueProduto" [(ngModel)]= "quantidadeEstoqueProduto">
           </div>
-        <div class="form-group">
-          <label for="exampleFormControlFile1">Upload da imagem:</label>
-          <input type="file" class="form-control-file" id="exampleFormControlFile1">
+          <!-- <div class="form-group">
+            <label for="exampleFormControlFile1">Upload da imagem:</label>
+            <input type="file" class="form-control-file" [(ngModel)]= "pathImg">
+          </div> -->
+          <div class="form-group">
+            <label for="exampleInputEmail1">Path Imagem:</label>
+            <input type="text" class="form-control" name="pathImg" [(ngModel)]= "pathImg">
         </div>
-        <button type="submit" class="botao_cadastrar">CADASTRAR</button>
     </form>
+    <button type="button" class="botao_cadastrar" (click)="salvar()">CADASTRAR</button>
+    <button type="button" class="botao_cadastrar" (click)="listar()">LISTAR</button>
 </main>
