--- a/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
+++ b/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
@@ -16,7 +16,7 @@
     .texto-nav-link{
         font-family: Inter;
         display: block;
-        color: #004AAD;
+        color: $cor-principal;
         font-size: 1.5rem;
     }
 
