--- a/ShipIt-front/src/app/cards/cards.component.scss
+++ b/ShipIt-front/src/app/cards/cards.component.scss
@@ -20,15 +20,15 @@ h5{
 }
 
 .botao_comprar{
-    background-color: #004AAD;
+    background-color: $cor-principal;
     padding: 10px 20px;
-    color: #ffffff;
+    color: $cor-secundaria;
     border-radius: 0.6rem;
     text-decoration: none;
 }
 
 .botao_comprar:hover{
-    background-color: #0068ef;
+    background-color: $hover-principal-light;
 }
 
 .preco{
