--- a/ShipIt-front/src/app/login/login.component.scss
+++ b/ShipIt-front/src/app/login/login.component.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
+@import '../../styles.scss';
 
 .container{
     position: relative;
@@ -27,38 +28,34 @@ h2{
     font-size: 1.3rem;
 }
 
-.login h1{
-    color: #FFFFFF;
-}
-
-.login h2{
-    color: #FFFFFF;
-}
-
-.login input::placeholder{
-    color: #004AAD;
-}
-
 .datepicker{
-    color: #FFFFFF;
+    color: $cor-secundaria;
 }
 
 .login{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #004AAD;
+    background-color: $cor-principal;
     padding: 5rem;
     border-top-left-radius: 1.3rem;
     border-bottom-left-radius: 1.3rem;
-}
-
-.login button{
-    background-color: #FFFFFF;
-    border-radius: 0.8rem;
-    font-family: Inter;
-    font-size: 1rem;
-    color: #004AAD;
+    input::placeholder{
+        color: $cor-principal;
+    }
+    h2{
+        color: $cor-secundaria;
+    }
+    h1{
+        color: $cor-secundaria;
+    }
+    button{
+        background-color: $cor-secundaria;
+        border-radius: 0.8rem;
+        font-family: Inter;
+        font-size: 1rem;
+        color: $cor-principal;
+    }
 }
 
 .logoLogin{
@@ -71,34 +68,29 @@ h2{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: #D9D9D9;
+    background-color: $cor-alternativa;
     padding: 5rem;
     padding-left: 10rem;
     padding-right: 10rem;
     border-top-right-radius: 1.3rem;
     border-bottom-right-radius: 1.3rem;
-}
-
-.cadastro input{
-    background-color: #004AAD;
-
-}
-
-.cadastro input::placeholder{
-    color: #FFFFFF;
-}
-
-.cadastro button{
-    width: 12rem;
-    background-color:#004AAD;
-    border-radius: 0.8rem;
-    font-family: Inter;
-    font-size: 1rem;
-    color: #FFFFFF;
-}
-
-.cadastro h1{
-    color: #004AAD;
+    input{
+        background-color: $cor-principal;
+    }
+    input::placeholder{
+        color: $cor-secundaria;
+    }
+    button{
+        width: 12rem;
+        background-color: $cor-principal;
+        border-radius: 0.8rem;
+        font-family: Inter;
+        font-size: 1rem;
+        color: $cor-secundaria;
+    }
+    h1{
+        color: $cor-principal;
+    }
 }
 
 .logoCadastro{
