--- a/ShipIt-front/src/styles.scss
+++ b/ShipIt-front/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+//cores basicas do sistema
+$cor-principal: #004AAD;
+$cor-secundaria: #FFFFFF;
+$cor-terciaria: #000000;
+$cor-alternativa: #D9D9D9;
+
+//cores utilitarias
+$hover-principal-light: #0062e2;
+$hover-principal-dark: #004AAD;
