--- a/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
+++ b/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-
+@import '../../styles.scss';
 .logo{
     height: 60px;
 }
