adicionado dark-mode

--- a/ShipIt-front/src/styles.scss
+++ b/ShipIt-front/src/styles.scss
@@ -7,3 +7,7 @@ $cor-alternativa: #D9D9D9;
 //cores utilitarias
 $hover-principal-light: #0062e2;
 $hover-principal-dark: #004AAD;
+
+body{
+    background-color: var(--body);
+}
