--- a/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
+++ b/ShipIt-front/src/app/nav-bar/nav-bar.component.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 @import '../../styles.scss';
+
 .logo{
     height: 60px;
 }
@@ -8,9 +9,17 @@
     height: 35px;
 }
 
+.icone-moon{
+    height: 28px;
+}
+
 .texto-nav-link{
     display: none;
 }
+
+.image-transition {
+    transition: all 300ms ease;
+  }
 
 @media (max-width: 800px){
     .texto-nav-link{
