alteraçoes no dark mode

--- a/ShipIt-front/src/app/cadastro-item/cadastro-item.component.html
+++ b/ShipIt-front/src/app/cadastro-item/cadastro-item.component.html
@@ -1,5 +1,5 @@
 <main>
-    <a [routerLink]="['/home']"><img src="../../assets/images/logoHorizontal.png"></a>
+    <a [routerLink]="['/home']"><img src="../../assets/images/logoHorizontal.png" alt="Logo ShipIt"></a>
     <form class="formulario">
         <div class="form-group">
             <label for="exampleInputEmail1">Nome:</label>
