--- a/ShipIt-front/src/app/login/login.component.html
+++ b/ShipIt-front/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="login">
         <a routerLink="/home">
-            <img class="logoLogin" src="../../assets/images/logoBranca.png">
+            <img class="logoLogin" src="../../assets/images/logoBranca.png" alt="Logo ShipIt">
         </a>
         <h1>Bem vindo!</h1>
         <h2>Login:</h2>
@@ -14,7 +14,7 @@
 
     <div class="cadastro">
         <a routerLink="/home">
-            <img class="logoCadastro" src="../../assets/images/logoHorizontal.png">
+            <img class="logoCadastro" src="../../assets/images/logoHorizontal.png" alt="Logo ShipIt">
         </a>
         <h1>Crie a sua conta!</h1>
         <!--input type="text" placeholder="Usuário">
