Commit do controle de sessão pelas rotas

--- a/ShipIt-front/src/app/nav-bar-restrict/nav-bar-restrict.component.html
+++ b/ShipIt-front/src/app/nav-bar-restrict/nav-bar-restrict.component.html
@@ -2,24 +2,19 @@
   <header id="header-light">
     <nav class="cabecalho navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand mr-lg-5 ml-lg-5" href="#"><img id="logo" class="logo" src="../../assets/images/logoHorizontal.png"></a>
-
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-
       <div class="collapse navbar-collapse mr-lg-5" id="navbarTogglerDemo03">
         <form class="form-inline ml-lg-5 mt-3 mr-auto">
           <input class="form-control mr-sm-2 input-busca" type="search" placeholder="Search" aria-label="Search">
           <button id="botao-busca" class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
-
         <ul class="navbar-nav mt-2 mt-lg-0 my-2 my-lg-0 align-middle">
-
           <a class="nav-link ml-3" href="/login">
             <li class="nav-item row">
               <img id="img-perfil" class="icone mr-lg-4" src="../../assets/icons/user-dark.svg" alt="icon perfil">
-              <span class="texto-nav-link align-middle mt-2 ml-2" id="span-perfil">Perfil</span>
+              <span class="texto-nav-link align-middle mt-2 ml-2" id="span-perfil">Perfil</span>Mario
             </li>
           </a>
           <a class="nav-link ml-3" href="#">
@@ -28,14 +23,12 @@
               <span class="texto-nav-link align-middle mt-2 ml-2" id="span-carrinho">Carrinho</span>
             </li>
           </a>
-
           <a class="nav-link ml-3" href="#" (click)="toggle()">
             <li class="nav-item row">
               <img id="img-theme" class="icone-moon mr-lg-4 mt-1" src="../../assets/icons/moon-dark.svg" alt="icon mudar tema">
             </li>
           </a>
         </ul>
-
       </div>
     </nav>
   </header>
