--- a/ShipIt-front/src/app/account/login/login.component.scss
+++ b/ShipIt-front/src/app/account/login/login.component.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
-@import '../../styles.scss';
+@import '../../../styles.scss';
 
 .container{
     position: relative;
-    top: 50%;
-    transform: translateY(-50%); 
+    top: 42%;
+    transform: translateY(-50%);
     display: flex;
     justify-content: center;
 }
