Ajustes de estrutura do sistema

--- a/ShipIt-front/src/app/account/operadores/operadores.component.html
+++ b/ShipIt-front/src/app/account/operadores/operadores.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="card" style="margin: 20px;">
-    <img src="../../../assets/images/STATIONERY.png" width="300px"  class="d-block w-100" alt="...">
+    <img src="./assets/images/STATIONERY.png" width="300px"  class="d-block w-100" alt="...">
     <h2 class="card-header" style="background-color: #004AAD; color: #1C98ED;">GERENCIAR OPERADORES</h2>
     <div class="row" style="margin: 5px;">
       <div class="col-sm-8">
