--- a/ShipIt-front/src/app/admin/admin.component.html
+++ b/ShipIt-front/src/app/admin/admin.component.html
@@ -14,18 +14,21 @@
         </div>
         <div class="col-sm-5">
           <div class="card">
-            <h2 class="card-header" style="background-color: #1C98ED; color: #004AAD;">PRINCIPAIS CONTROLES</h2>
+            <h2 class="card-header" style="background-color: #1C98ED; color: #004AAD;">Minha conta</h2>
             <div class="card-body">
-              <a href="/operadores" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar operadores [admin]</a>
+              <a href="/operadores" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar operadores [Admin]</a>
               <br>
               <br>
-              <a href="/produtoControl" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar Produtos </a>
+              <a href="/operadores" class="btn btn-primary" style="background-color: #004AAD;">Minha Conta</a>
               <br>
               <br>
-              <a href="/pedido" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar Pedidos</a>
+              <a href="/produtos" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar meus Produtos </a>
               <br>
               <br>
-              <a href="/pagamento" class="btn btn-primary" style="background-color: #004AAD;">Formas de pagamento</a>
+              <a href="/pedido" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar meus Pedidos</a>
+              <br>
+              <br>
+              <a href="/pagamento" class="btn btn-primary" style="background-color: #004AAD;">Gerenciar cartões</a>
             </div>
           </div>
         </div>
