Ajuste dos principais cruds do sistema

--- a/ShipIt-front/src/app/admin/admin.component.html
+++ b/ShipIt-front/src/app/admin/admin.component.html
@@ -33,11 +33,11 @@
                   <hr>
                 </div>
               </div>
-              <div class="row">
+              <!--div class="row">
                 <div class="col-sm-12">
                   <a href="/pagamento" class="btn btn-primary col-sm-12" style="background-color: #1C98ED; color: black;">Gerenciar Vendas</a>
                 </div>
-              </div>
+              </div-->
             </div>
           </div>
         </div>
