--- a/ShipIt-front/src/app/pedido/carrinho/carrinho.component.html
+++ b/ShipIt-front/src/app/pedido/carrinho/carrinho.component.html
@@ -9,10 +9,10 @@
   <div class="card" style="margin: 20px;">
     <h2 class="card-header" style="background-color: #1C98ED; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;">Meus pedidos</h2>
     <div class="row" style="margin: 5px;">
-      <div class="col-sm-12">
+      <div class="col-12">
         <div class="div-card" id="testando">
           <div class="row">
-            <div class="card col-sm-3" *ngFor="let pedido of listPedidoProdutoItem">
+            <div class="card col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" *ngFor="let pedido of listPedidoProdutoItem">
               <img class="imagem-card" height="300px;" width="auto;" style="magin: 0; padding: 0;" src={{pedido.pathProduto}} alt="Card image cap">
               <div class="container">
                 <div class="card-body">
