--- a/ShipIt-front/src/app/produto/cards/cards.component.html
+++ b/ShipIt-front/src/app/produto/cards/cards.component.html
@@ -1,7 +1,7 @@
 <section style="margin:30px; padding: 0;">
   <h2 style="color: #004AAD">PRINCIPAIS PRODUTOS</h2>
   <div class="row">
-    <div class="card col-sm-3" *ngFor="let produto of listProdutos">
+    <div class="card col-12 col-sm-6 col-md-6 col-lg-3 col-xl-3" *ngFor="let produto of listProdutos">
       <img class="imagem-card" height="auto;" width="auto;" style="magin: 0; padding: 0;" src={{produto.pathProduto}} alt="Card image cap">
       <div class="container">
         <div class="card-body">
